# pedalo

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  stmain.py
pedalo/: main.py
pedalo/agents/: code_interpreter.py
